CSS/navigation.css
						.navigation{
								position:fixed;
								top:0;
								z-index:4;
								height:40px;
								background-color:#100e17;
								width:100%;
							
						}

						.navigation ul{
								list-style:none;
								margin:0;
								padding:0;
						}

						.navigation > ul > li{
								float:left; /*This is important if I want menu to be at bottom and not side*/
								/*margin-top:10px;*/
								background-color:#100e17;
								padding: 5px;
						}

						.navigation ul > li > ul{
								position:absolute;
								display:none;
								background-color:#100e17;
						}

						.navigation ul > li > ul >li{
								padding: 5px;
						}

						.navigation a{
								display:block;
								margin:2px 3px;
								text-decoration:none;
								font-size:20px;
								color:white;
								text-align:center;
								width:100px;
						}

						.navigation li:hover{
								background-color:#423a5f;
								color:black;
						}

						.navigation ul > li:hover > ul{
								display:block;
						}

						#login_button{
								float:right;
								margin-right:15px;
						}

